<resources>
    <string name="app_name">GoldBook</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_username_password">Forgot username / password?</string>
    <string name="hello">Hello!</string>
    <string name="please_sign_up_to_continue">Please sign up to continue</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_credentials">Forgot Credentials</string>
    <string name="select_which_contact_detail_to_use_to_recover_your_account">Select which contact detail to use to recover your account.</string>
    <string name="next">Next</string>
    <string name="downloadreport">Download Report</string>
    <string name="generatereport">Generate Report</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="recover_account">Recover Account</string>
    <string name="contact_information">Contact Details</string>
    <string name="address_detail">Address Details</string>
    <string name="new_customer">New Customer</string>
    <string name="new_organization">New Organization</string>
    <string name="new_itemcategory">New Item Category</string>
    <string name="edit_itemcategory">Edit Item Category</string>
    <string name="new_branch">New Branch</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="edit_organization">Edit Organization</string>
    <string name="edit_branch">Edit Branch</string>
    <string name="new_item">New Item</string>
    <string name="opening_stock">Opening Stock</string>
    <string name="new_opening_stock">New Opening Stock</string>
    <string name="edit_opening_stock">Edit Opening Stock</string>
    <string name="what_would_you_like_to_update_it_to">What would you like to update it to?</string>
    <string name="new_mobile_number">New mobile number</string>
    <string name="new_email">New email</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="almost_there">Almost there</string>
    <string name="setup_your_organization_s_profile">Setup your organization\'s profile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="app_language">App Language</string>
    <string name="security">Security</string>
    <string name="quick_setup">Quick setup</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="payment">Payment</string>
    <string name="customer">Customer</string>
    <string name="reports">Reports</string>
    <string name="report">Report</string>
    <string name="receipt">Receipt</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_bill">New Purchase Bill</string>
    <string name="sale">Sale</string>
    <string name="organization">Organizations</string>
    <string name="item_categories">Item Categories</string>
    <string name="branches">Branches</string>
    <string name="dashboard">Dashboard</string>
    <string name="customers">Customers</string>
    <string name="items">Items</string>
    <string name="item">Item</string>
    <string name="all_items">All Items</string>
    <string name="add_item">Add Item</string>
    <string name="add_charges">Add Charges</string>
    <string name="qr_code">QR code</string>
    <string name="new_invoice">New Invoice</string>
    <string name="new_payment">New Payment</string>
    <string name="new_receipt">New Receipt</string>
    <string name="edit_receipt">Edit Receipt</string>
    <string name="payment_reference">Payment Reference</string>
    <string name="receipt_reference">Receipt Reference</string>
    <string name="add_payment_line">Add Line</string>
    <string name="add_finemetal">Add Fine / Metal</string>
    <string name="add_ratecut">Add Rate-Cut (per gm)</string>
    <string name="add_cash">Add Cash</string>
    <string name="add_bank">Add Bank</string>
    <string name="add_adjustment">Add Adjustment</string>
    <string name="edit_finemetal">Edit Fine / Metal</string>
    <string name="edit_ratecut">Edit Rate-Cut</string>
    <string name="edit_cash">Edit Cash</string>
    <string name="edit_bank">Edit Bank</string>
    <string name="edit_adjustment">Edit Adjustment</string>
    <string name="supplier">Suppliers</string>
    <string name="all_supplier">All Suppliers</string>
    <string name="new_supplier">New Supplier</string>
    <string name="edit_supplier">Edit Supplier</string>
    <string name="reportfragfullname">com.goldbookapp.ui.ui.send.ReportsFragment</string>
    <string name="dashboardfragfullname">com.goldbookapp.ui.ui.home.DashboardFragment</string>
    <string name="customerfragfullname">com.goldbookapp.ui.ui.gallery.CustomersFragment</string>
    <string name="supplierfragfullname">com.goldbookapp.ui.fragment.SupplierFragment</string>
    <string name="itemfragfullname">com.goldbookapp.ui.ui.slideshow.ItemsFragment</string>
    <string name="salesfragfullname">com.goldbookapp.ui.fragment.SaleFragment</string>
    <string name="purchasefragfullname">com.goldbookapp.ui.ui.share.PurchaseFragment</string>
    <string name="paymentfragfullname">com.goldbookapp.ui.ui.send.PaymentFragment</string>
    <string name="receiptfragfullname">  com.goldbookapp.ui.ui.send.ReceiptFragment</string>
    <string name="openingStockfragfullname">com.goldbookapp.ui.ui.send.OpeningStockFragment</string>
    <string name="contactaccountstatement">Detailed Contact A/c Statement</string>
    <string name="summarycontactaccountstatement">Summary Contact A/c Statement</string>
    <string name="stockstatement">Stock Statement</string>
    <string name="salesregister">Sales Register</string>
    <string name="purchaseregister">Purchase Register</string>
    <string name="daybook">Day Book</string>
    <string name="cashbankbook">Cash / Bank Book</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_check_internet_msg">Please check your internet connection and try again.</string>
    <string name="mobile_digit_count">Please enter valid mobile number.</string>
    <string name="name_validation_msg">Please enter name.</string>
    <string name="dob_validation_msg">Please enter date of birth.</string>
    <string name="gender_validation_msg">Please enter gender.</string>
    <string name="email_validation_msg">Please enter valid email.</string>
    <string name="skip_registration_validation_msg">Are you sure to skip registration process and go back?</string>
    <string name="complete_registration_msg">Please complete the registration process.</string>
    <string name="transactions">Transactions</string>
    <string name="contact_info">Contact Info</string>
    <string name="account_info">Accounting Info</string>
    <string name="inventory_info">Inventory Info</string>
    <string name="send_statement">Send Statement</string>
    <string name="mark_as_inactive">Mark as Inactive</string>
    <string name="mark_as_active">Mark as Active</string>
    <string name="delete">Delete</string>
    <string name="all_customers">All Customers</string>
    <string name="active_items">Active Items</string>
    <string name="active_customers">Active Customers</string>
    <string name="inactive_customers">Inactive Customers</string>
    <string name="inactive_items">Inactive Items</string>
    <string name="active_suppiler">Active Suppliers</string>
    <string name="inactive_suppiler">Inactive Suppliers</string>
    <string name="business">Business</string>
    <string name="individual">Individual</string>
    <string name="name">Name</string>
    <string name="o_s_fine_bal">O/s Fine Bal</string>
    <string name="o_s_cash_bal">O/s Cash Bal</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="stock_in_hand">Stock-in-hand</string>
    <string name="no_record_found">No records found!</string>
    <string name="no_entries_found">No entries found!</string>
    <string name="edit_item">Edit Item</string>
    <string name="voucherhash">Voucher #</string>
    <string name="date">Date</string>
    <string name="voucher">Voucher No. </string>
    <string name="invoiceno">Invoice No. </string>
    <string name="purchaseno">Purchase No. </string>
    <string name="paymentno">Payment No. </string>
    <string name="receiptno">Receipt No. </string>
    <string name="partyname">Party Name</string>
    <string name="edit_invoice">Edit Invoice</string>
    <string name="debit_credit">Debit or Credit</string>
    <string name="setting_debit_credit">Debit &amp; Credit (Dr / Cr)</string>
    <string name="setting_udhar_jama">Udhar &amp; Jama (U / J)</string>
    <string name="setting_receivable_payable">Receivable &amp; Payable (Rec / Pay)</string>
    <string name="setting_len_den">Len &amp; Den (L / D)</string>
    <string name="setting_custom">I will choose while printing</string>
    <string name="setting_one">One Copy"</string>
    <string name="setting_two">Two Copies</string>
    <string name="setting_three">Three Copies</string>
    <string name="setting_four">Four Copies</string>
    <string name="touchwise">Touch-wise</string>
    <string name="entrywise">Entry-wise</string>
    <string name="udhar_jama">Udhar or Jama</string>
    <string name="rec_pay">Receivables - Payables</string>
    <string name="len_den">Len - Den</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="udhar">Udhar</string>
    <string name="jama">Jama</string>
    <string name="len">Len</string>
    <string name="den">Den</string>
    <string name="receivable">Receivable</string>
    <string name="payable">Payable</string>
    <string name="save_close">Save &amp; Close</string>
    <string name="save_add">Save &amp; Add</string>
    <string name="gm">gm</string>
    <string name="privacy_and_security">Privacy &amp; Security</string>
    <string name="app_lock">App Lock</string>
    <string name="two_factor_description">Protect your account from unauthorized access by requiring an OTP authentication in addition to your GoldBook password.</string>
    <string name="selectstock">Select Stock to Pay / Issue</string>
    <string name="editstock">Edit Stock to Pay / Issue</string>
    <string name="selstock">Select Stock</string>
    <string name="saveAndAddNew">

<![CDATA[Save & Add New]]>
</string>
    <string name="saveAndClose">

<![CDATA[Save & Close]]>
</string>
    <string name="editDeleteItemPaymentDialogTitle">Payment Item</string>
    <string name="update">Update</string>
    <string name="current_plan">Current plan:</string>
    <string name="to_upgrade_your_subscription">To upgrade your subscription:</string>
    <string name="subs_first_line">1. Go to www.goldbook.in</string>
    <string name="subs_second_line">2. Choose a plan right for you</string>
    <string name="subs_third_line">3. Sign-In or proceed as Guest</string>
    <string name="subs_fourth_line"><![CDATA[4. Fill-in the billing information & make payment]]></string>
    <string name="subs_fifth_line">If you need any assistance, contact us at support@goldbook.in</string>
    <string name="subs_extra_line">Read more about the available plans</string>
</resources>