<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginModel"
            type="com.goldbookapp.model.LoginModel" />

    </data>
    <LinearLayout
        android:id="@+id/ll_Root_subscription"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
        <include layout="@layout/toolbar_layout" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp"
                >
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_CurrentPlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/gray_bg"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="0dp"
                    android:layout_gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/round_rect_5radius"
                        android:padding="@dimen/_10sdp"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/subs_currentplan_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/current_plan"
                            android:textColor="@android:color/black"
                            android:fontFamily="@font/proxima_nova_regular"
                            android:textSize="@dimen/_14sdp"/>
                        <TextView
                            android:id="@+id/subs_currentplan"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:textColor="@android:color/black"
                            android:fontFamily="@font/proxima_nova_bold"
                            android:textSize="@dimen/_16sdp"/>



                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/proxima_nova_medium"
                    android:text="@string/to_upgrade_your_subscription"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sdp" />
                <TextView
                    android:id="@+id/subs_first_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/subs_first_line"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/subs_second_line"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/subs_third_line"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/subs_fourth_line"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />
                <TextView
                    android:id="@+id/subs_fifth_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/subs_fifth_line"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />
                <TextView
                    android:id="@+id/subs_extra_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/subs_extra_line"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />









            </LinearLayout>



    </LinearLayout>
</layout>