<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginModel"
            type="com.goldbookapp.model.LoginModel" />

    </data>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/contact_information"
                android:textColor="@color/header_black_text"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/tvCurrentMobileEmailContact"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_text"
                android:fontFamily="@font/proxima_nova_regular"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_would_you_like_to_update_it_to"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/proxima_nova_bold"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_40sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvMobileUpdateInputLayout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_mobile_number"
                android:layout_marginTop="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMobileUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:background="@android:color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvEmailUpdateInputLayout"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmailUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:fontFamily="@font/proxima_nova_regular"

                    android:background="@android:color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:focusable="true"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:gravity="center"/>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

</LinearLayout>

</layout>